--- a/environment.yml
+++ b/environment.yml
@@ -29,19 +29,23 @@ dependencies:
     - attrs==21.2.0
     - backcall==0.2.0
     - bleach==3.3.1
+    - blinker==1.7.0
     - cffi==1.14.6
-    - click==8.0.1
+    - click==8.1.7
     - cycler==0.10.0
     - debugpy==1.4.1
     - decorator==5.0.9
     - defusedxml==0.7.1
     - entrypoints==0.3
+    - flask==3.0.2
+    - importlib-metadata==7.1.0
     - ipykernel==6.0.3
     - ipython==7.26.0
     - ipython-genutils==0.2.0
     - ipywidgets==7.6.3
+    - itsdangerous==2.1.2
     - jedi==0.18.0
-    - jinja2==3.0.1
+    - jinja2==3.1.3
     - joblib==1.0.1
     - jsonschema==3.2.0
     - jupyter==1.0.0
@@ -51,9 +55,10 @@ dependencies:
     - jupyterlab-pygments==0.1.2
     - jupyterlab-widgets==1.0.0
     - kiwisolver==1.3.1
-    - markupsafe==2.0.1
+    - markupsafe==2.1.5
     - matplotlib==3.4.2
     - matplotlib-inline==0.1.2
+    - matplotlib-venn==0.11.9
     - mistune==0.8.4
     - nbclient==0.5.3
     - nbconvert==6.1.0
@@ -68,6 +73,7 @@ dependencies:
     - pexpect==4.8.0
     - pickleshare==0.7.5
     - pillow==8.3.1
+    - plotly==5.20.0
     - prometheus-client==0.11.0
     - prompt-toolkit==3.0.19
     - ptyprocess==0.7.0
@@ -87,6 +93,8 @@ dependencies:
     - send2trash==1.7.1
     - six==1.16.0
     - sklearn==0.0
+    - statannot==0.2.3
+    - tenacity==8.2.3
     - terminado==0.10.1
     - testpath==0.5.0
     - threadpoolctl==2.2.0
@@ -94,4 +102,6 @@ dependencies:
     - traitlets==5.0.5
     - wcwidth==0.2.5
     - webencodings==0.5.1
+    - werkzeug==3.0.1
     - widgetsnbextension==3.5.1
+    - zipp==3.18.1
